--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <heade>
+    <head>
         <meta charset="UTF_8">
         <title>My Resume</title>
-    </heade>
+    </head>
     <body>
         <h1>Victoria Oladele</h1>
         <img src="./3C3A3595-2 2 copy.JPG" height="200"/>
